# ocaml-docs-ci

./: .dockerignore  .gitignore  .gitmodules  .ocamlformat  Dockerfile  Dockerfile.web  Makefile  README.md  config.sample.json  docker-compose.yml  docs-ci-tools.opam  docs-ci-web.opam  docs-ci.opam  dune  dune-project  dune-workspace  example.opam  mirage-ci.opam  ocaml-docs-ci-client.opam  ocaml-docs-ci.opam  ocaml-docs-ci.opam.template
doc/: docs-ci-client-cli-tool.md  pipeline-diagram.md
docker/: README.md
docker/git-http/: Dockerfile  entrypoint.sh
docker/git-http-website/: Dockerfile
docker/git-http/etc/nginx/sites-enabled/: git-http
docker/init/: Dockerfile  init.sh
docker/storage/: Dockerfile  entrypoint.sh
docker/worker/: Dockerfile
migrations/: 20230726075248_create_pipeline_index.up.sql  20230726075248_initial.down.sql  20230726075248_initial.up.sql  20230815051930_create_package_index.down.sql  20230815051930_create_package_index.up.sql  20230921005634_add_attributes_to_pipeline.down.sql  20230921005634_add_attributes_to_pipeline.up.sql  20240123102438_remove_odoc_commit.down.sql  20240123102438_remove_odoc_commit.up.sql
scripts/: unikernel_test.sh
src/: analyse.ml  analyse.mli  counts.ml  docs_ci.ml  dune  logging.ml  main.ml  mirage_ci.ml  monorepo.ml  monorepo.mli  ocaml_docs_ci.ml  opamfile.ml  pipeline.ml  pipeline.mli  setup.ml  stats.ml  universe.ml
src/api/: dune  schema.capnp  solver.ml  worker.ml
src/api/pipeline/: client.ml  client.mli  dune  raw.ml  schema.capnp
src/cli/: README.md  cargo.ml  dune  epoch.md  epoch.ml  logging.ml  main.ml  ocaml-docs-ci-client.md
src/lib/: assembler.ml  builder.ml  compile.ml  compile.mli  config.ml  config.mli  current_solver.ml  current_solver.mli  dirs_context.ml  dirs_context.mli  docs.ml  docs.mli  dune  epoch.ml  epoch.mli  folder_digest.ml  folder_digest.mli  git_store.ml  git_store.mli  html.ml  html.mli  index.ml  indexes.ml  indexes.mli  indexes2.ml  init.ml  init.mli  jobs.ml  key.mli  linker.ml  live.ml  live.mli  log.ml  matrix.ml  mirage.ml  mirage.mli  misc.ml  mld.ml  mld.mli  monitor.ml  (+48 more)
src/pipelines/: PR.ml  PR.mli  api_impl.ml  docs.ml  dune  monorepo.ml  monorepo.mli  monorepo_edge.ml  monorepo_released.ml  pipelines.ml  pipelines.mli  skeleton.ml  skeleton.mli
src/solver/: dune  epoch_lock.ml  git_context.ml  git_context.mli  main.ml  opam_repository.ml  opam_repository.mli  service.ml  service.mli  solver.ml  solver.mli
test/cli/: dune  run  run.md
test/lib/: dune  test_compile.ml  test_lib.ml  test_retry.ml
test/monitor/: dune  test_monitor.ml
tools/githttpserver/: dune  server.ml
web/: README.md
web/.graphql_ppx_cache/: schema.json.hash  schema.json.marshaled
web/client/: dune  main.ml
web/pages/: docs.re  dune  index.re  notfound.re  package.re  packages.re  server.re  template.re
web/src/: docs_api.ml  documentation.ml  documentation.mli  dune  gql_packages.ml  opam_git.ml  opam_repository.ml  package.ml  package.mli  state.ml  state.mli
web/static/: highlight.pack.js  main.css  odoc.css  preflight.css  theme.css
web/static/css/: styles.css
web/static/js/: main.js
