(executables
 (public_names ocaml-docs-ci stats counts)
 (package ocaml-docs-ci)
 (names ocaml_docs_ci stats counts)
 (libraries
  current
  current.cache
  current_git
  current_github
  current_web
  current_docker
  astring
  dockerfile
  cmdliner
  fmt.tty
  logs.fmt
  logs.cli
  lwt
  lwt.unix
  memtrace
  obuilder-spec
  opam-file-format
  docs_ci_pipelines
  docs_ci_lib
  dune-build-info
  mirage-crypto-rng.unix
  prometheus-app.unix)
 (preprocess
  (pps ppx_deriving_yojson)))
