(library
 (name solver_api)
 (libraries capnp-rpc-lwt current_rpc ppx_deriving_yojson.runtime)
 (flags
  (:standard -w -53-55))
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson)))

(rule
 (targets schema.ml schema.mli)
 (deps schema.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))
