(executables
 (public_names ocaml-docs-ci-client epoch)
 (package ocaml-docs-ci-client)
 (names main epoch)
 (libraries
  ocaml-docs-ci.pipeline_api
  current_rpc
  capnp-rpc-unix
  logs.cli
  logs.fmt
  fmt.cli
  fmt.tty
  dune-build-info
  timedesc))

(mdx
 (files ocaml-docs-ci-client.md epoch.md)
 (package ocaml-docs-ci-client))
