;;

(library
 (name docs_ci_lib)
 (package ocaml-docs-ci)
 (libraries
  current
  current.cache
  current_github
  current_git
  current_web
  current_docker
  astring
  dockerfile
  cmdliner
  digestif
  fmt.tty
  logs.fmt
  git-unix
  lwt
  lwt.unix
  obuilder-spec
  opam-file-format
  capnp-rpc-lwt
  capnp-rpc-unix
  current_ocluster
  opam-0install
  solver_api
  ocaml-version
  docker_hub)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.std)))
