;;

(library
 (name docs_ci_pipelines)
 (package ocaml-docs-ci)
 (libraries
  docs_ci_lib
  current
  current.cache
  current_github
  current_git
  current_web
  current_docker
  current_rpc
  capnp-rpc-unix
  pipeline_api
  astring
  dockerfile
  cmdliner
  fmt.tty
  logs.fmt
  lwt
  lwt.unix
  obuilder-spec
  opam-file-format)
 (preprocess
  (pps ppx_deriving_yojson)))
